--- a/frontend/src/app/components/game/game.component.html
+++ b/frontend/src/app/components/game/game.component.html
@@ -29,11 +29,11 @@
                         <div>{{game.isInUserList}}</div>
                     </div> 
                     <div class="game-list-button" *ngIf="(isLoggedIn$ | async) as isLoggedIn; else notLoggedIn">
-                        <p-button *ngIf="!game.isInUserList" label="Add to list" icon="pi pi-plus" iconPos="right"></p-button>
-                        <p-button *ngIf="game.isInUserList" label="Remove from list" icon="pi pi-minus" iconPos="right"></p-button>
+                        <p-button *ngIf="!game.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right"></p-button>
+                        <p-button *ngIf="game.isInUserList"  severity="danger" label="Remove" icon="pi pi-minus" iconPos="right"></p-button>
                     </div>
                     <ng-template #notLoggedIn>
-                        <p-button label="Add to list" icon="pi pi-plus" iconPos="right" [routerLink]="['/login']"></p-button>
+                        <p-button label="Add to list" severity="success"  icon="pi pi-plus" iconPos="right" [routerLink]="['/login']"></p-button>
                     </ng-template>
                     <!-- <div class="game-list-button">
                        <p-button label="Add to list" icon="pi pi-plus" iconPos="right" class="list-button"></p-button>
@@ -53,7 +53,14 @@
                     </div>
                     <div class="game-grid-action">
                         <span class="game-rating"><i class="pi pi-star-fill"></i>Rating: {{game.rating}}</span>
-                        <p-button label="Add to list" icon="pi pi-plus" iconPos="right"></p-button>
+                        <div class="game-list-button" *ngIf="(isLoggedIn$ | async) as isLoggedIn; else notLoggedIn">
+                            <p-button *ngIf="!game.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right"></p-button>
+                            <p-button *ngIf="game.isInUserList"  severity="danger" label="Remove" icon="pi pi-minus" iconPos="right"></p-button>
+                        </div>
+                        <ng-template #notLoggedIn>
+                            <p-button severity="success" label="Add to list" icon="pi pi-plus" iconPos="right" [routerLink]="['/login']"></p-button>
+                        </ng-template>
+                        <!-- <p-button label="Add to list" icon="pi pi-plus" iconPos="right"></p-button> -->
                      </div> 
                 </div>
             </div>
