--- a/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
+++ b/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
@@ -16,8 +16,8 @@
             </div>   
             <div class="add-button">
                 <div class="game-list-button" *ngIf="(isLoggedIn$ | async) as isLoggedIn; else notLoggedIn">
-                    <p-button *ngIf="!gameDetails.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right"></p-button>
-                    <p-button *ngIf="gameDetails.isInUserList"  severity="danger" label="Remove" icon="pi pi-minus" iconPos="right"></p-button>
+                    <p-button *ngIf="!gameDetails.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right" (onClick)="addGameToList()"></p-button>
+                    <p-button *ngIf="gameDetails.isInUserList"  severity="danger" label="Remove" icon="pi pi-minus" iconPos="right" (onClick)="deleteGameFromList(gameDetails.id)"></p-button>
                 </div>
                 <ng-template #notLoggedIn>
                     <p-button severity="success" label="Add to list" icon="pi pi-plus" iconPos="right" [routerLink]="['/login']"></p-button>
