--- a/frontend/src/app/components/gameDetail/game-detail/game-detail.component.css
+++ b/frontend/src/app/components/gameDetail/game-detail/game-detail.component.css
@@ -3,6 +3,13 @@
     width: 100%;
     height: 100%;
 }
+.pi-heart-fill{
+    color: #8a8a8a;
+    cursor: pointer;
+}
+.highlighted{
+    color: #ff0000;
+}
 
 .game-general{
     width: 100%;
