--- a/frontend/src/app/components/game/game.component.html
+++ b/frontend/src/app/components/game/game.component.html
@@ -29,7 +29,7 @@
                         <div>{{game.isInUserList}}</div>
                     </div> 
                     <div class="game-list-button" *ngIf="(isLoggedIn$ | async) as isLoggedIn; else notLoggedIn">
-                        <p-button *ngIf="!game.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right"></p-button>
+                        <p-button *ngIf="!game.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right" [routerLink]="['/games/', game.id, 'add-to-list']"></p-button>  
                         <p-button *ngIf="game.isInUserList"  severity="danger" label="Remove" icon="pi pi-minus" iconPos="right" (onClick)="deleteGameFromList(game.id)"></p-button>
                     </div>
                     <ng-template #notLoggedIn>
@@ -51,13 +51,12 @@
                     <div class="game-grid-action">
                         <span class="game-rating"><i class="pi pi-star-fill"></i>Rating: {{game.rating}}</span>
                         <div class="game-list-button" *ngIf="(isLoggedIn$ | async) as isLoggedIn; else notLoggedIn">
-                            <p-button *ngIf="!game.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right"></p-button>
+                            <p-button *ngIf="!game.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right" [routerLink]="['/games/', game.id, 'add-to-list']"></p-button>
                             <p-button *ngIf="game.isInUserList"  severity="danger" label="Remove" icon="pi pi-minus" iconPos="right" (onClick)="deleteGameFromList(game.id)"></p-button>
                         </div>
                         <ng-template #notLoggedIn>
                             <p-button severity="success" label="Add to list" icon="pi pi-plus" iconPos="right" [routerLink]="['/login']"></p-button>
                         </ng-template>
-                        <!-- <p-button label="Add to list" icon="pi pi-plus" iconPos="right"></p-button> -->
                      </div> 
                 </div>
             </div>
