--- a/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
+++ b/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
@@ -63,7 +63,7 @@
                     <div class="col-12">
                         <div lass="flex flex-column xl:flex-row xl:align-items-start p-4 gap-4">
                             <div class="top-review">
-                                <div class="review-user"><span class="pi pi-user"></span>{{ review.nickName }}</div>
+                                <div class="review-user">{{ review.nickName }}</div>
                                 <div class= "review-date">{{review.createdDate | date: 'dd-MM-yyyy HH:mm':'pl'}}</div>
                             </div>  
                             <div class="review-desc">{{ review.reviewDescription }}</div>
