--- a/frontend/src/app/components/gameDetail/game-detail/game-detail.component.css
+++ b/frontend/src/app/components/gameDetail/game-detail/game-detail.component.css
@@ -15,7 +15,7 @@
     align-items: center;
     justify-content: center;
     z-index: 999;
-  }
+}
 
 .game-general{
     width: 100%;
@@ -24,6 +24,7 @@
     border-bottom: 1px solid rgba(202, 202, 202, 0.5);
     padding-bottom: 20px;
 }
+
 .image-box{
     width: 250px;
 }
@@ -50,6 +51,48 @@
     padding-left: 20px;
     box-sizing: border-box;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.game-button{
+    margin-top: 1rem;
+    margin-bottom: 5px;
+}
+
+.rate{
+    margin-left: 4px;
+    display: flex;
+}
+.game-name div{
+    display: inline;
+}
+
+::ng-deep .rate .p-rating{
+    margin-top: 12px;
+    margin-right: 10px;
+}
+
+.nofav{
+    color: #8a8a8a;
+    margin-left: 10px;
+    font-size: 19px;
+}
+.fav{
+    color: #ff0000 ;
+    margin-left: 10px;
+    font-size: 19px;
+}
+
+.favourites-label {
+    cursor: pointer; 
+    margin-left: 10px;
+    font-size: 19px;
+}
+
+.game-button p-button{
+    line-height: 5px;
+    margin-top: 1rem;
 }
 
 i{
@@ -64,7 +107,6 @@ i{
     color: #ffd000;
 }
 
-
 .game-details{
     display: flex;
     margin-top: 0.5rem; 
@@ -78,13 +120,6 @@ i{
     margin-right: 0;
 }
 
-.add-button{
-    margin-top: 1rem;
-}
-.add-button p-button{
-    line-height: 5px;
-    margin-top: 1rem;
-}
 .game-others{
     margin-top: 1rem;
     width: 100%;
@@ -139,7 +174,7 @@ i{
     color: #3c3c3d;
 }
 
-@media (min-width: 600px) and (max-width: 833px) {
+@media (max-width: 833px) {
     .game-details{
         flex-direction: column;
         margin-top: 0.5rem; 
@@ -147,7 +182,19 @@ i{
     }
 
 }
-@media (max-width: 599px) {
+@media (max-width: 670px) {
+    .rate{
+        flex-direction: column;
+    }
+    ::ng-deep .rate .p-rating{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    .rate button{
+       margin-top: 10px;
+       justify-content: center;
+    }
     .game-general{
         flex-direction: column;
         align-items: center;
@@ -156,12 +203,15 @@ i{
         padding-left:  0px;
     }
     .game-details{
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
+        text-align: center;
     }
-
-    .game-details div{
+    .game-details > div > span {
+        display: inline-flex; 
+    }
+    .header{
+        margin-right: 10px;
+    }
+    /* .game-details div{
         margin-right: 0;
     }
 
@@ -174,7 +224,7 @@ i{
     }
     .game-details .header  {
         justify-content: space-between;
-    }
+    } */
     .game-name{
         margin-top: 1rem;
         text-align: center;
@@ -183,7 +233,7 @@ i{
         text-align: center;
     }
 
-    .add-button p-button{
+    .game-button p-button{
         display: flex;
         justify-content: center;
         width: 100%;
